@@ -1,21 +1,18 @@
 package com.faraz.dictionary;
 
-import static com.faraz.dictionary.JavaMailRead.readMail;
 import static com.faraz.dictionary.MainActivity.CHICAGO;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
 
-import android.annotation.SuppressLint;
-import android.os.Build;
-import android.util.Base64;
+import android.util.Log;
 
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
-import androidx.annotation.RequiresApi;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.type.TypeFactory;
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.Lists;
 
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -25,9 +22,13 @@ import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
@@ -35,12 +36,11 @@ import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
-@SuppressLint("NewApi")
-@RequiresApi(api = Build.VERSION_CODES.TIRAMISU)
 public class Repository {
+  public static final ZoneId CHICAGO_ZONE_ID = ZoneId.of(CHICAGO);
+  private static final String TAG = Repository.class.getSimpleName();
   private static final String filename = "inmemorydb.json";
   private static final Predicate<WordEntity> REMINDED_TIME_IS_ABSENT_PREDICATE = we -> we.getRemindedTime() == null;
-  private static final ZoneId CHICAGO_ZONE_ID = ZoneId.of(CHICAGO);
   private static final ObjectMapper objectMapper = new ObjectMapper();
   private static final TypeFactory typeFactory = objectMapper.getTypeFactory();
   private static final DateTimeFormatter DATE_TIME_FORMATTER = DateTimeFormatter.ISO_INSTANT;
@@ -56,15 +56,16 @@ public class Repository {
       return super.put(key, value);
     }
   };
-
+  private static final Comparator<WordEntity> SORT_BY_REMINDED_TIME_COMPARATOR =
+          (w1, w2) -> toDateRemindedTime(w2).compareTo(toDateRemindedTime(w1));
   private static boolean initialized;
   private static FileService fileService;
-  private static String email;
-  private static String password;
+  private final String pastebinDeveloperKey;
+  private final String pastebinUserKey;
 
   public Repository(String... creds) {
-    email = creds.length > 0 ? creds[0] : EMPTY;
-    password = creds.length > 1 ? creds[1] : EMPTY;
+    pastebinDeveloperKey = creds.length > 0 ? creds[0] : EMPTY;
+    pastebinUserKey = creds.length > 1 ? creds[1] : EMPTY;
     fileService = new FileService(filename);
     init();
   }
@@ -76,31 +77,41 @@ public class Repository {
   private void init() {
     // halt erroneous attempt to re-init repository;
     if (initialized) {
-      System.out.println("Yeah we ain't initializing again.");
+      Log.i(TAG, "Repository already initialized.");
       return;
     }
     Completable.runAsync(() -> {
       try {
+        List<WordEntity> wordEntities = Collections.emptyList();
         String json = StringUtils.strip((new String(fileService.readFileAsByte())));
         if (StringUtils.isBlank(json)) {
-          json = StringUtils.strip(readMail(email, password));
-          if (StringUtils.isNotBlank(json)) {
-            json = CompressUtil.decompress(Base64.decode(json, Base64.DEFAULT));
-            writeOverFile(json);
-          }
+          wordEntities = Optional.of(new PastebinService(pastebinDeveloperKey, pastebinUserKey))
+                  .map(pbs -> Optional.of(pbs).map(PastebinService::lastBackupAndCleanup).stream()
+                          .flatMap(List::stream).peek(this::print).map(pbs::get).map(this::toWordEntities).toList())
+                  .flatMap(list -> Optional.of(list.stream().flatMap(List::stream).toList())).orElseGet(ArrayList::new);
+          writeOverFile(getValuesAsString(wordEntities));
         }
-        List<WordEntity> wordEntities = StringUtils.isBlank(json) ? Collections.emptyList() :
-                objectMapper.readValue(json, typeFactory.constructCollectionType(List.class, WordEntity.class));
-        wordEntities.forEach(we -> inMemoryDb.put(we.getWord(), stripWhiteSpaces(we)));
-        Optional.of(inMemoryDb).map(ObjectUtils::isNotEmpty).ifPresent(bool -> initialized = bool);
+        Optional.of(wordEntities).filter(ObjectUtils::isNotEmpty).orElseGet(() -> toWordEntities(json))
+                .forEach(we -> inMemoryDb.put(we.getWord(), stripWhiteSpaces(we)));
+        initialized = ObjectUtils.isNotEmpty(inMemoryDb);
       } catch (Exception e) {
-        throw new RuntimeException(e);
+        Log.e(TAG, "error...", e);
       }
     });
   }
 
+  private void print(String string) {
+    Log.i(TAG, String.format(Locale.US, "Pastebin: Getting key '%s'.", string));
+  }
+
   public List<String> getWords() {
     return ImmutableList.copyOf(inMemoryDb.keySet());
+  }
+
+  public List<String> getLast100RemindedWords() {
+    List<String> list = inMemoryDb.values().stream().filter(we -> we.getRemindedTime() != null)
+            .sorted(SORT_BY_REMINDED_TIME_COMPARATOR).map(WordEntity::getWord).toList();
+    return list.subList(0, Math.min(100, list.size()));
   }
 
   public int getLength() {
@@ -120,20 +131,29 @@ public class Repository {
     return wordEntity.getRemindedTime() == null ? DBResult.INSERT : DBResult.UPDATE;
   }
 
-  public String getValuesAsAString() {
+  public List<String> getValuesAsStrings() {
+    return Lists.partition(inMemoryDb.values().stream().toList(), 4000).stream().map(this::getValuesAsString)
+            .toList();
+  }
+
+  private String getValuesAsString(Collection<WordEntity> values) {
     try {
-      return objectMapper.writeValueAsString(inMemoryDb.values());
+      return values.isEmpty() ? EMPTY : objectMapper.writeValueAsString(values);
     } catch (JsonProcessingException e) {
       return ExceptionUtils.getStackTrace(e);
     }
+  }
+
+  private String getValuesAsString() {
+    return getValuesAsString(inMemoryDb.values());
   }
 
   /**
    * Dangerous method!
    */
   public void reset() {
-    inMemoryDb.clear();
     fileService.clearFile();
+    inMemoryDb.clear();
     initialized = false;
     init();
   }
@@ -160,10 +180,9 @@ public class Repository {
   }
 
   public List<String> getByRemindedTime(int limit) {
-    return inMemoryDb.values().stream().filter(we -> we.getRemindedTime() != null)
-            .sorted((w1, w2) -> toDateRemindedTime(w2).compareTo(toDateRemindedTime(w1)))
-            .map(WordEntity::getWord).limit(limit)
-            .collect(Collectors.collectingAndThen(Collectors.toList(), ImmutableList::copyOf));
+    List<String> list = inMemoryDb.values().stream().filter(we -> we.getRemindedTime() != null)
+            .sorted(SORT_BY_REMINDED_TIME_COMPARATOR).map(WordEntity::getWord).toList();
+    return list.subList(0, Math.min(limit, list.size()));
   }
 
   public void delete(String word) {
@@ -172,7 +191,7 @@ public class Repository {
   }
 
   private void flush() {
-    CompletableFuture.runAsync(() -> writeOverFile(getValuesAsAString()));
+    CompletableFuture.runAsync(() -> writeOverFile(getValuesAsString()));
   }
 
   private WordEntity setRemindedTime(WordEntity wordEntity) {
@@ -191,8 +210,8 @@ public class Repository {
     return () -> new RuntimeException(w + " is absent.");
   }
 
-  private Instant toDateRemindedTime(WordEntity w) {
-    return Instant.parse(w.getRemindedTime());
+  private static Instant toDateRemindedTime(WordEntity w) {
+    return toInstant(w.getRemindedTime());
   }
 
   private WordEntity stripWhiteSpaces(WordEntity we) {
@@ -201,5 +220,19 @@ public class Repository {
 
   private void writeOverFile(String value) {
     fileService.writeFileExternalStorage(false, value);
+  }
+
+  public static Instant toInstant(String instant) {
+    return Optional.ofNullable(instant).map(StringUtils::strip).filter(StringUtils::isNotBlank).map(Instant::parse)
+            .orElseThrow(() -> new RuntimeException("String 'instant' cannot be empty/null"));
+  }
+
+  private List<WordEntity> toWordEntities(String json) {
+    try {
+      return StringUtils.isBlank(json) ? Collections.emptyList() :
+              objectMapper.readValue(json, typeFactory.constructCollectionType(List.class, WordEntity.class));
+    } catch (JsonProcessingException e) {
+      throw new RuntimeException(e);
+    }
   }
 }
